Trying to fix ie8 alignment issues with labels...

--- a/static_files/assets/scss/_forms.scss
+++ b/static_files/assets/scss/_forms.scss
@@ -33,6 +33,11 @@ form {
     .control-label-group {
       text-align: right;
       @include respond-to(xs-sm) { text-align: left; }
+      @include body-prefix(ie8) {
+        legend.control-label {
+          text-align: right;
+        }
+      }
     }
   }
 }
